--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -11,6 +11,7 @@ input[type="text"] {
     font-size: 1.5rem;
     min-width: 0;
     margin: 1rem;
+    width: 100%;
 }
 
 input[type="text"]:focus {
